--- a/META.yml
+++ b/META.yml
@@ -13,8 +13,10 @@ build_requires:
 requires:
     Bit::Vector:      0
     Class::Accessor:  0
+    Hash::Merge:      0
     Modern::Perl:     0
     Moose:            0
+    Term::ReadLine:   0
     Time::HiRes:      0
 no_index:
     directory:
